# project2

./: BU  CMakeLists.txt  Calculator.cpp  Calculator.h  Client.cpp  Client.h  ComExp.cpp  ComExp.h  Command.cpp  Command.h  DoubleMap.cpp  DoubleMap.h  Expression.cpp  Expression.h  Global.h  OpenServerCommand.cpp  OpenServerCommand.h  ReadData.cpp  ReadData.h  ServerSock.cpp  ServerSock.h  ShuntingYard.cpp  ShuntingYard.h  data  fly  generic_small.xml  main.cpp  newCalc.cpp  newCalc.h  text.cpp  text.h
